# CyKit-macos

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.basedpyright/: baseline.json
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml
Py3/: CyKIT.py  eeg.py
Py3/platform_ble/: __init__.py  base.py
docs/: api.rst  concepts.rst  conf.py  configuration.rst  index.rst  migration.rst  quickstart.rst  recording.rst  runtime-control.rst
examples/: ble_insight.py  usb_epoc_plus.py
src/cykit/: __init__.py  __main__.py  _helpers.py  client.py  discovery.py  eeg.py  exceptions.py  main.py  models.py  websocket.py
src/cykit/control/: __init__.py
src/cykit/platform_ble/: __init__.py  base.py  bleak_backend.py
tests/: test_cli.py  test_public_api.py
web-next/: index.html  package.json
web-next/src/: App.tsx
web-next/src/components/calibration/: CalibrationPanel.tsx
web-next/src/components/connection/: ConnectionPanel.tsx
web-next/src/components/device/: DeviceInfo.tsx  SensorQuality.tsx
web-next/src/components/eeg/: ChannelSelector.tsx  EEGCanvas.tsx  EEGCanvasRenderer.ts  FormatSelector.tsx  ResolutionSlider.tsx
web-next/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx  TabBar.tsx
web-next/src/components/recording/: RecordingPanel.tsx
web-next/src/hooks/: useBaseline.ts  useDeviceInfo.ts  useEEGData.ts  useRecording.ts  useWebSocket.ts
web-next/src/lib/: protocol.ts  ringBuffer.ts
web-next/src/lib/models/: epoc.ts  epocPlus.ts  insight.ts  registry.ts  types.ts
web-next/src/styles/: globals.css
