[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cykit"]

[project]
name = "cykit"
version = "4.0.0"
description = "Emotiv EEG headset data acquisition (cross-platform)"
requires-python = ">=3.10"
dependencies = [
    "pycryptodomex>=3.19.0",
    "bleak>=0.21.0",
    "pyusb>=1.2.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.0.0",
    "furo>=2024.8.6",
]
lint = [
    "ruff>=0.11.7",
    "basedpyright>=1.39.2",
]
test = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cykit"]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
pythonVersion = "3.10"
include = ["src", "tests"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[project.scripts]
cykit = "cykit.main:cli"
